# django-start-template

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
app/: Dockerfile  django-local.env  django-prod.env  pyproject.toml  requirements.txt
app/app/: settings.py  urls.py
